--- a/views/home.html
+++ b/views/home.html
@@ -6,7 +6,6 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <script src="./static/home.js" type="text/javascript"></script>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark ">
@@ -14,16 +13,18 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
-                <form role="search" name="formsearch" id="formsearch" onsubmit="return submitted()">
+                
                 <div class="input-group" style="padding-left: 150px;">
                   <div class="form-outline">
+                    
                     <input id="search-input"  type="search" placeholder="Search" id="form1" class="form-control" />
                   </div>
-                  <button id="submit" name="submit" type="submit" class="btn btn-primary" form="formsearch">
-                    <i class="fa fa-search"></i>
+                  <form role="search" name="formsearch" id="formsearch" onsubmit="searched()"></form>
+                  <button  name="submitq" type="submit" onsubmit="searched()" form="formsearch"  class="btn btn-primary" >
+                    <i  class="fa fa-search"></i>
                   </button>
+                </form>
                 </div>
-              </form>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
           
               <ul class="navbar-nav ml-auto">
@@ -211,6 +212,7 @@
               </div>
             </div>
           </div>
-
+          
     </body>
 </html>
+<script src="./static/home.js" type="text/javascript" defer></script>
